Remove about page header section padding on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -144,6 +144,10 @@ p {
 
 /* Mobile screens and down */
 @media (max-width: 576px) {
+    .col-12 {
+        padding-right: 0 !important;
+    }
+    
     .progress-container:after {
         font-size: 24px;
     }
