Fix padding and text on portfolio page

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -49,7 +49,17 @@ body {
 	height: auto;
 }
 
+/* Mobile device and small */
 @media (max-width: 576px) {
+	.row {
+		margin-right: 0 !important;
+    	margin-left: -0 !important;
+	}
+
+	.card-section {
+		padding: 10px;
+	}
+
 	.card-container {
 		padding-right: 0;
 		padding-left: 0;
@@ -182,4 +192,8 @@ body {
 
 .profile-link-container a {
 	text-decoration: none;
+}
+
+.social-media-links {
+	color: #be020b;
 }
