--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     background-color: #000000;
     color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .row {
