--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -135,8 +135,8 @@ body {
 	top: 300px;
 	left: 50%;
 	margin-left: -85px;	
-	border: 2px solid #fff;
-	color: #fff;
+	border: 2px solid #be020b;
+	color: #be020b;
 	font-size: 19px;
 	text-align: center;
 	font-weight: 700;
@@ -150,6 +150,7 @@ body {
 }
 #view_details:hover {	
 	background: #fff;
+	border: 2px solid #fff;
 	text-decoration: none;
 	color: #dc3545;
 	cursor: pointer;
