Fix form on contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -47,9 +47,8 @@ body {
 @media screen and (min-width: 600px) {
     .card-container {
         position: absolute;
-        top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, 0);
     }
 }
 
