Fix padding on gamasamaga page

--- a/css/project-page.css
+++ b/css/project-page.css
@@ -16,6 +16,11 @@ body {
     margin-left: 0;
 }
 
+.col-12 {
+    padding-right: 0;
+    padding-left: 0;
+}
+
 .sub-heading {
     font-weight: 300;
 }
