--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+
 * {
     background-color: #000000;
     color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
